tests/rosetta/out/Smalltalk/call-a-function-6.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| bar main args |
bar := [:a :b :c | Transcript show: ((((((((((a asString)) + (', '))) + ((b asString)))) + (', '))) + ((c asString)))) printString; cr. ].
main := [ args := Dictionary from:{}.
args at: 'a' put: 3.
args at: 'b' put: 2.
args at: 'c' put: 1.
bar value: args at: 'a' value: args at: 'b' value: args at: 'c'. ].
main value.
